--- a/modules/cog_utils/locale/fr_FR.po
+++ b/modules/cog_utils/locale/fr_FR.po
@@ -2,6 +2,28 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
+msgctxt "error:event.type:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:event.type:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:event.type:"
+msgid "The code must be unique!"
+msgstr "Le code doit être unique !"
+
 msgctxt "error:ir.action.keyword:"
 msgid "Cannot import : no object %s with functional key: \"%s\" were found."
 msgstr ""
@@ -153,6 +175,24 @@ msgstr ""
 "\"%s\"."
 
 msgctxt "error:ir.model.method:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:ir.model:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:ir.model:"
 msgid ""
 "Cannot import : the following objects:\n"
 "%s\n"
@@ -297,6 +337,24 @@ msgstr "Le jeux d'essai %s utilise la méthode %s qui n'existe pas!"
 msgctxt "error:ir.test_case.run:"
 msgid "Cannot load test case file %s"
 msgstr "Impossible de charger le jeu d'essai du fichier %s"
+
+msgctxt "error:ir.test_case:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:ir.test_case:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
 
 msgctxt "error:ir.ui.icon:"
 msgid "Cannot import : no object %s with functional key: \"%s\" were found."
@@ -461,6 +519,50 @@ msgstr " "
 msgctxt "field:country.subdivision,id:"
 msgid ""
 msgstr " "
+
+msgctxt "field:event,id:"
+msgid "ID"
+msgstr "ID"
+
+msgctxt "field:event.type,code:"
+msgid "Code"
+msgstr "Code"
+
+msgctxt "field:event.type,create_date:"
+msgid "Create Date"
+msgstr "Date de Création"
+
+msgctxt "field:event.type,create_date_:"
+msgid "Creation date"
+msgstr "Date de Création"
+
+msgctxt "field:event.type,create_uid:"
+msgid "Create User"
+msgstr "Créé par"
+
+msgctxt "field:event.type,id:"
+msgid "ID"
+msgstr "ID"
+
+msgctxt "field:event.type,name:"
+msgid "Name"
+msgstr "Nom"
+
+msgctxt "field:event.type,rec_name:"
+msgid "Name"
+msgstr "Nom"
+
+msgctxt "field:event.type,write_date:"
+msgid "Write Date"
+msgstr "Date de mise à jour"
+
+msgctxt "field:event.type,write_uid:"
+msgid "Write User"
+msgstr "Mis à jour par"
+
+msgctxt "field:event.type,xml_id:"
+msgid "XML Id"
+msgstr "Identifiant XML"
 
 msgctxt "field:ir.action,xml_id:"
 msgid "XML Id"
@@ -1049,6 +1151,18 @@ msgctxt "model:country.subdivision,name:"
 msgid ""
 msgstr " "
 
+msgctxt "model:event,name:"
+msgid "Event"
+msgstr "Evénement"
+
+msgctxt "model:event.type,name:"
+msgid "Event Type"
+msgstr "Type d'événement"
+
+msgctxt "model:ir.action,name:act_event_type_form"
+msgid "Event Types"
+msgstr "Types d'événement"
+
 msgctxt "model:ir.action,name:act_export_package"
 msgid "Export Package"
 msgstr "Exports groupés"
@@ -1125,6 +1239,14 @@ msgctxt "model:ir.test_case.run.select.method,name:"
 msgid "Test Case Selector"
 msgstr "Sélection des jeux d'essai"
 
+msgctxt "model:ir.ui.menu,name:event_type"
+msgid "Event Type"
+msgstr "Type d'événement"
+
+msgctxt "model:ir.ui.menu,name:menu_event"
+msgid "Event"
+msgstr "Evénement"
+
 msgctxt "model:ir.ui.menu,name:menu_export_import"
 msgid "Export Import"
 msgstr "Export Import"
@@ -1188,6 +1310,14 @@ msgstr "Manuel"
 msgctxt "selection:ir.test_case.run.select.method,selection:"
 msgid "Not Selected"
 msgstr "Non Sélectionné"
+
+msgctxt "view:event.type:"
+msgid "Event Type"
+msgstr "Type d'événement"
+
+msgctxt "view:event.type:"
+msgid "Event Types"
+msgstr "Types d'événement"
 
 msgctxt "view:ir.export_package.add_records.start:"
 msgid "Select An Export Package"
