--- a/modules/contract/locale/fr_FR.po
+++ b/modules/contract/locale/fr_FR.po
@@ -78,13 +78,13 @@ msgstr ""
 "partagent la même clé fonctionnelle :\n"
 "\"%s\"."
 
-msgctxt "error:contract.decline.select_reason:"
+msgctxt "error:contract.extra_data:"
 msgid "Cannot import : no object %s with functional key: \"%s\" were found."
 msgstr ""
 "Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
 "\"%s\"."
 
-msgctxt "error:contract.decline.select_reason:"
+msgctxt "error:contract.extra_data:"
 msgid ""
 "Cannot import : the following objects:\n"
 "%s\n"
@@ -96,13 +96,13 @@ msgstr ""
 "partagent la même clé fonctionnelle :\n"
 "\"%s\"."
 
-msgctxt "error:contract.extra_data:"
+msgctxt "error:contract.option:"
 msgid "Cannot import : no object %s with functional key: \"%s\" were found."
 msgstr ""
 "Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
 "\"%s\"."
 
-msgctxt "error:contract.extra_data:"
+msgctxt "error:contract.option:"
 msgid ""
 "Cannot import : the following objects:\n"
 "%s\n"
@@ -136,13 +136,13 @@ msgctxt "error:contract.option:"
 msgid "No end date defined"
 msgstr "Pas de date de fin défini"
 
-msgctxt "error:contract.select_start_date:"
+msgctxt "error:contract.service:"
 msgid "Cannot import : no object %s with functional key: \"%s\" were found."
 msgstr ""
 "Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
 "\"%s\"."
 
-msgctxt "error:contract.select_start_date:"
+msgctxt "error:contract.service:"
 msgid ""
 "Cannot import : the following objects:\n"
 "%s\n"
@@ -177,10 +177,40 @@ msgid "Activation Periods \"%(first)s\" and \"%(second)s\" overlap."
 msgstr "Les périodes \"%(première)s\" et \"%(seconde)s\" se chevauchent"
 
 msgctxt "error:contract:"
+msgid ""
+"Cannot add functional key : both quotenumber and contract_number are missing"
+" from values"
+msgstr ""
+"Impossible d'ajouter la clé fonctionnelle : numéro de devis et de contrat "
+"absents des valeurs"
+
+msgctxt "error:contract:"
 msgid "Cannot change start date, multiple activation period detected"
 msgstr ""
 "Impossible de changer la date de début, il existe plusieurs période "
 "d'activation"
+
+msgctxt "error:contract:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:contract:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:contract:"
+msgid "Invalid file format"
+msgstr "Format de fichier non valide"
 
 msgctxt "error:contract:"
 msgid "No quote sequence defined"
@@ -271,6 +301,10 @@ msgstr "Données Complémentaires"
 msgctxt "field:contract,extra_datas:"
 msgid "Extra Data"
 msgstr "Données Complémentaires"
+
+msgctxt "field:contract,func_key:"
+msgid "Functional Key"
+msgstr "Clé fonctionnelle"
 
 msgctxt "field:contract,id:"
 msgid "ID"
@@ -548,18 +582,6 @@ msgctxt "field:contract.decline.select_reason,contract:"
 msgid "Contract"
 msgstr "Contrat"
 
-msgctxt "field:contract.decline.select_reason,create_date:"
-msgid "Create Date"
-msgstr "Date de Création"
-
-msgctxt "field:contract.decline.select_reason,create_date_:"
-msgid "Creation date"
-msgstr "Date de Création"
-
-msgctxt "field:contract.decline.select_reason,create_uid:"
-msgid "Create User"
-msgstr "Créé par"
-
 msgctxt "field:contract.decline.select_reason,id:"
 msgid "ID"
 msgstr "ID"
@@ -567,22 +589,6 @@ msgstr "ID"
 msgctxt "field:contract.decline.select_reason,reason:"
 msgid "Reason"
 msgstr "Raison"
-
-msgctxt "field:contract.decline.select_reason,rec_name:"
-msgid "Name"
-msgstr "Nom"
-
-msgctxt "field:contract.decline.select_reason,write_date:"
-msgid "Write Date"
-msgstr "Date de mise à jour"
-
-msgctxt "field:contract.decline.select_reason,write_uid:"
-msgid "Write User"
-msgstr "Mis à jour par"
-
-msgctxt "field:contract.decline.select_reason,xml_id:"
-msgid "XML Id"
-msgstr "Identifiant XML"
 
 msgctxt "field:contract.end.select_date,end_date:"
 msgid "End date"
@@ -700,6 +706,10 @@ msgctxt "field:contract.option,end_date:"
 msgid "End Date"
 msgstr "Date de Fin"
 
+msgctxt "field:contract.option,func_key:"
+msgid "Functional Key"
+msgstr "Clé fonctionnelle"
+
 msgctxt "field:contract.option,id:"
 msgid "ID"
 msgstr "ID"
@@ -711,6 +721,10 @@ msgstr "Date de fin manuelle"
 msgctxt "field:contract.option,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Etendre l'arbre"
+
+msgctxt "field:contract.option,parent_contract:"
+msgid "Parent Contract"
+msgstr "Contrat parent"
 
 msgctxt "field:contract.option,product:"
 msgid "Product"
@@ -744,18 +758,6 @@ msgctxt "field:contract.select_start_date,contract:"
 msgid "Contract"
 msgstr "Contrat"
 
-msgctxt "field:contract.select_start_date,create_date:"
-msgid "Create Date"
-msgstr "Date de Création"
-
-msgctxt "field:contract.select_start_date,create_date_:"
-msgid "Creation date"
-msgstr "Date de Création"
-
-msgctxt "field:contract.select_start_date,create_uid:"
-msgid "Create User"
-msgstr "Créé par"
-
 msgctxt "field:contract.select_start_date,former_appliable_conditions_date:"
 msgid "Former appliable conditions date"
 msgstr "Date de condition précédente"
@@ -775,22 +777,6 @@ msgstr "Nouvelle date de conditions"
 msgctxt "field:contract.select_start_date,new_start_date:"
 msgid "New start date"
 msgstr "Nouvel date d'effet"
-
-msgctxt "field:contract.select_start_date,rec_name:"
-msgid "Name"
-msgstr "Nom"
-
-msgctxt "field:contract.select_start_date,write_date:"
-msgid "Write Date"
-msgstr "Date de mise à jour"
-
-msgctxt "field:contract.select_start_date,write_uid:"
-msgid "Write User"
-msgstr "Mis à jour par"
-
-msgctxt "field:contract.select_start_date,xml_id:"
-msgid "XML Id"
-msgstr "Identifiant XML"
 
 msgctxt "field:contract.service,contract:"
 msgid "Contract"
@@ -900,6 +886,11 @@ msgstr "ID"
 msgctxt "field:contract.wizard.option_subscription.options_displayer,options:"
 msgid "Options"
 msgstr "Options"
+
+msgctxt ""
+"field:contract.wizard.option_subscription.options_displayer,with_package:"
+msgid "With Package"
+msgstr "Avec formule"
 
 msgctxt ""
 "field:contract.wizard.option_subscription.options_displayer.option,coverage:"
@@ -1505,5 +1496,15 @@ msgstr "Annuler"
 
 msgctxt ""
 "wizard_button:contract.wizard.option_subscription,options_displayer,update_options:"
+msgid "Next"
+msgstr "Suivant"
+
+msgctxt ""
+"wizard_button:contract.wizard.option_subscription,select_package,end:"
+msgid "Cancel"
+msgstr "Annuler"
+
+msgctxt ""
+"wizard_button:contract.wizard.option_subscription,select_package,options_displayer:"
 msgid "Next"
 msgstr "Suivant"
