--- a/modules/loan/locale/fr_FR.po
+++ b/modules/loan/locale/fr_FR.po
@@ -105,24 +105,6 @@ msgctxt "error:loan:"
 msgid "No loan sequence defined"
 msgstr "Pas de séquence de prêt définie"
 
-msgctxt "error:party.display_insured_outstanding_loan_balance.select_date:"
-msgid "Cannot import : no object %s with functional key: \"%s\" were found."
-msgstr ""
-"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
-"\"%s\"."
-
-msgctxt "error:party.display_insured_outstanding_loan_balance.select_date:"
-msgid ""
-"Cannot import : the following objects:\n"
-"%s\n"
-"share the same functional key:\n"
-"\"%s\"."
-msgstr ""
-"Impossible d'importer : Les objets suivants :\n"
-"%s\n"
-"partagent la même clé fonctionnelle :\n"
-"\"%s\"."
-
 msgctxt "error:party.synthesis.menu.loan:"
 msgid "Cannot import : no object %s with functional key: \"%s\" were found."
 msgstr ""
@@ -324,6 +306,10 @@ msgstr "Personnes assurées"
 msgctxt "field:loan,insured_persons_name:"
 msgid "Insured Persons"
 msgstr "Personnes assurées"
+
+msgctxt "field:loan,is_used_on_active_contract:"
+msgid "Used on an active contract"
+msgstr "Utilisé sur un contrat actif"
 
 msgctxt "field:loan,kind:"
 msgid "Kind"
@@ -651,21 +637,6 @@ msgid "Name"
 msgstr "Nom"
 
 msgctxt ""
-"field:party.display_insured_outstanding_loan_balance.select_date,create_date:"
-msgid "Create Date"
-msgstr "Date de Création"
-
-msgctxt ""
-"field:party.display_insured_outstanding_loan_balance.select_date,create_date_:"
-msgid "Creation date"
-msgstr "Date de Création"
-
-msgctxt ""
-"field:party.display_insured_outstanding_loan_balance.select_date,create_uid:"
-msgid "Create User"
-msgstr "Créé par"
-
-msgctxt ""
 "field:party.display_insured_outstanding_loan_balance.select_date,currency:"
 msgid "Currency"
 msgstr "Devises"
@@ -688,26 +659,6 @@ msgctxt ""
 "field:party.display_insured_outstanding_loan_balance.select_date,possible_currencies:"
 msgid "Possible Currencies"
 msgstr "Devises disponibles"
-
-msgctxt ""
-"field:party.display_insured_outstanding_loan_balance.select_date,rec_name:"
-msgid "Name"
-msgstr "Nom"
-
-msgctxt ""
-"field:party.display_insured_outstanding_loan_balance.select_date,write_date:"
-msgid "Write Date"
-msgstr "Date de mise à jour"
-
-msgctxt ""
-"field:party.display_insured_outstanding_loan_balance.select_date,write_uid:"
-msgid "Write User"
-msgstr "Mis à jour par"
-
-msgctxt ""
-"field:party.display_insured_outstanding_loan_balance.select_date,xml_id:"
-msgid "XML Id"
-msgstr "Identifiant XML"
 
 msgctxt "field:party.display_insured_outstanding_loan_balance.view,date:"
 msgid "Date"
@@ -827,7 +778,7 @@ msgid "Party Synthesis Menu Loan"
 msgstr "Synthèse acteur - Prêts"
 
 msgctxt "model:tag,name:tag_loan"
-msgid "Prêt"
+msgid "Loan"
 msgstr "Prêt"
 
 msgctxt "selection:loan,deferal:"
