--- a/modules/offered/locale/fr_FR.po
+++ b/modules/offered/locale/fr_FR.po
@@ -123,6 +123,24 @@ msgstr ""
 "\"%s\"."
 
 msgctxt "error:offered.option.description:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:offered.option.description:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:offered.option.description:"
 msgid "The code must be unique!"
 msgstr "Le code doit être unique"
 
@@ -209,6 +227,24 @@ msgstr ""
 "\"%s\"."
 
 msgctxt "error:offered.product-package:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:offered.product:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:offered.product:"
 msgid ""
 "Cannot import : the following objects:\n"
 "%s\n"
@@ -642,10 +678,6 @@ msgctxt "field:offered.option.description.ending_rule,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:offered.option.description.ending_rule,kind:"
-msgid "Rule Kind"
-msgstr "Type de règle"
-
 msgctxt "field:offered.option.description.ending_rule,rec_name:"
 msgid "Name"
 msgstr "Nom"
@@ -902,6 +934,10 @@ msgctxt "field:offered.product,ordered_coverages:"
 msgid "Ordered Coverages"
 msgstr "Garanties Triées"
 
+msgctxt "field:offered.product,packages:"
+msgid "Packages"
+msgstr "Formules"
+
 msgctxt "field:offered.product,rec_name:"
 msgid "Name"
 msgstr "Nom"
@@ -1131,7 +1167,7 @@ msgid "Extra Data"
 msgstr "Données Complémentaires"
 
 msgctxt "model:ir.ui.menu,name:menu_package_form"
-msgid "Formules"
+msgid "Package"
 msgstr "Formules"
 
 msgctxt "model:ir.ui.menu,name:menu_product"
@@ -1313,10 +1349,6 @@ msgstr "Compléter"
 msgctxt "selection:offered.option.description,template_behaviour:"
 msgid "Remove"
 msgstr "Remplacer"
-
-msgctxt "selection:offered.option.description.ending_rule,kind:"
-msgid ""
-msgstr " "
 
 msgctxt "selection:offered.product,subscriber_kind:"
 msgid "All"
