--- a/modules/party_cog/locale/fr_FR.po
+++ b/modules/party_cog/locale/fr_FR.po
@@ -79,6 +79,24 @@ msgstr ""
 "\"%s\"."
 
 msgctxt "error:party.party:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:party.party:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:party.party:"
 msgid ""
 "Duplicate(s) already exist(s) : \n"
 "%s"
@@ -239,6 +257,24 @@ msgstr ""
 "\"%s\"."
 
 msgctxt "error:party.synthesis.menu.relationship:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:party.synthesis.menu:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:party.synthesis.menu:"
 msgid ""
 "Cannot import : the following objects:\n"
 "%s\n"
@@ -1054,6 +1090,10 @@ msgctxt "selection:party.party,gender:"
 msgid "Mrs."
 msgstr "Mme"
 
+msgctxt "view:party.address:"
+msgid "Addresses"
+msgstr "Adresses"
+
 msgctxt "view:party.interaction:"
 msgid "Communication Log"
 msgstr "Historique des Contacts"
@@ -1069,6 +1109,10 @@ msgstr "Contact"
 msgctxt "view:party.party:"
 msgid "Party Synthesis"
 msgstr "Synthèse acteur"
+
+msgctxt "view:party.party:"
+msgid "Persons"
+msgstr "Personnes"
 
 msgctxt "view:party.party:"
 msgid "Roles"
