offered_insurance : fix #1139 , fix translation of selection for age kind http://rietveld.coopengo.com/5720001/

--- a/modules/offered_insurance/locale/fr_FR.po
+++ b/modules/offered_insurance/locale/fr_FR.po
@@ -2935,7 +2935,10 @@ msgid ""
 "real : Real\n"
 "at_given_day_of_year : At Given Day of Year\n"
 "at_end_of_month : At End of Month"
-msgstr "real: Réel"
+msgstr ""
+"real: Réel\n"
+"at_given_day_of_year: A un jour donné\n"
+"at_end_of_month: A la fin du mois"
 
 msgctxt "model:rule_engine.rule_parameter,string:given_day"
 msgid "Given Day"
