update translation Fix #382

--- a/modules/contract_life_clause/locale/fr_FR.po
+++ b/modules/contract_life_clause/locale/fr_FR.po
@@ -1,4 +1,4 @@
-# 
+#
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
@@ -86,7 +86,7 @@ msgstr "Référence"
 
 msgctxt "field:contract.option.beneficiary,share:"
 msgid "Share"
-msgstr "Quote-Part"
+msgstr "Quotité"
 
 msgctxt "field:contract.option.beneficiary,write_date:"
 msgid "Write Date"
